crates/gfm-syntax/tests/snapshots/paragraphs/example_189.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Inline [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "aaa" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    ParaBreak: "\n\n" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
  Paragraph [ offsets: 5, position: ( line: 2, col: 0 ) ] ]
    Inline [ offsets: 5, position: ( line: 2, col: 0 ) ] ]
      Word: "bbb" [ offsets: 5, position: ( line: 2, col: 0 ) ] ]
  Eof: "\0" [ offsets: 8, position: ( line: 2, col: 3 ) ] ]
