crates/gfm-syntax/tests/snapshots/paragraphs/example_190.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Inline [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "aaa" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    LineEnding: "\n" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Inline [ offsets: 4, position: ( line: 1, col: 0 ) ] ]
      Word: "bbb" [ offsets: 4, position: ( line: 1, col: 0 ) ] ]
    ParaBreak: "\n\n" [ offsets: 7, position: ( line: 1, col: 3 ) ] ]
  Paragraph [ offsets: 9, position: ( line: 3, col: 0 ) ] ]
    Inline [ offsets: 9, position: ( line: 3, col: 0 ) ] ]
      Word: "ccc" [ offsets: 9, position: ( line: 3, col: 0 ) ] ]
    LineEnding: "\n" [ offsets: 12, position: ( line: 3, col: 3 ) ] ]
    Inline [ offsets: 13, position: ( line: 4, col: 0 ) ] ]
      Word: "ddd" [ offsets: 13, position: ( line: 4, col: 0 ) ] ]
  Eof: "\0" [ offsets: 16, position: ( line: 4, col: 3 ) ] ]
